<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/nav_graph"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.wahidhasyim.movieapp.presentation.home.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_DetailFragment"
            app:destination="@id/DetailFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_favoriteFragment"
            app:destination="@+id/FavoriteFragment"/>


    </fragment>

    <fragment
        android:id="@+id/DetailFragment"
        android:name="com.wahidhasyim.movieapp.presentation.detail.DetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="MovieItem"
            app:argType="com.wahidhasyim.movieapp.data.entities.MovieItem" />

    </fragment>

    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="com.wahidhasyim.movieapp.presentation.favorite.FavoriteFragment"
        android:label="@string/favorite_fragment_label"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/action_Favorite_to_DetailFragment"
            app:destination="@id/DetailFragment" />

    </fragment>
</navigation>